--- a/impl/pnr/hdmi.power.html
+++ b/impl/pnr/hdmi.power.html
@@ -89,7 +89,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Jun  4 20:58:04 2025
+<td>Sat Jun 28 00:21:26 2025
 </td>
 </tr>
 <tr>
@@ -161,7 +161,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>32.119</td>
+<td>32.163</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -169,7 +169,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>5.198</td>
+<td>5.241</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -180,7 +180,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.655</td>
+<td>25.656</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -188,7 +188,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.345</td>
+<td>84.344</td>
 </tr>
 </table>
 <h2><a name="Supply_Summary">Supply Information:</a></h2>
@@ -203,9 +203,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.278</td>
+<td>3.314</td>
 <td>3.504</td>
-<td>8.139</td>
+<td>8.183</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -240,7 +240,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.172</td>
+<td>0.146</td>
 <td>NA</td>
 <td>3.148</td>
 </tr>
@@ -249,6 +249,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>8.098
 <td>6.591
 <td>13.425
+</tr>
+<tr>
+<td>BSRAM</td>
+<td>0.069
+<td>NA</td>
+<td>NA</td>
 </tr>
 <tr>
 <td>PLL</td>
@@ -266,36 +272,36 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top</td>
-<td>3.686</td>
-<td>3.686(3.686)</td>
+<td>3.730</td>
+<td>3.730(3.730)</td>
 <tr>
 <td>top/svo_hdmi_inst/</td>
-<td>0.170</td>
-<td>0.170(0.169)</td>
+<td>0.213</td>
+<td>0.213(0.213)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_enc/</td>
-<td>0.016</td>
-<td>0.016(0.000)</td>
+<td>0.029</td>
+<td>0.029(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/</td>
-<td>0.002</td>
-<td>0.002(0.002)</td>
+<td>0.010</td>
+<td>0.010(0.009)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/svo_buf_in/</td>
-<td>0.001</td>
-<td>0.001(0.001)</td>
+<td>0.004</td>
+<td>0.004(0.004)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/svo_buf_in/svo_axis_pipe/</td>
-<td>0.001</td>
-<td>0.001(0.000)</td>
+<td>0.004</td>
+<td>0.004(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/svo_buf_out/</td>
-<td>0.001</td>
-<td>0.001(0.001)</td>
+<td>0.004</td>
+<td>0.004(0.003)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/svo_buf_out/svo_axis_pipe/</td>
-<td>0.001</td>
-<td>0.001(0.000)</td>
+<td>0.003</td>
+<td>0.003(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_overlay/svo_buf_over/</td>
 <td>0.001</td>
@@ -306,8 +312,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.000(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_tcard/</td>
-<td>0.071</td>
-<td>0.071(0.000)</td>
+<td>0.095</td>
+<td>0.095(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_term/</td>
 <td>0.005</td>
@@ -318,8 +324,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.025(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_tmds_1/</td>
-<td>0.025</td>
-<td>0.025(0.000)</td>
+<td>0.024</td>
+<td>0.024(0.000)</td>
 <tr>
 <td>top/svo_hdmi_inst/svo_tmds_2/</td>
 <td>0.025</td>
@@ -343,7 +349,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>u_div_5/clkdiv_inst/CLKOUT.default_gen_clk</td>
 <td>25.200</td>
-<td>0.173</td>
+<td>0.217</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
