--- a/impl/pnr/hdmi.rpt.html
+++ b/impl/pnr/hdmi.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Jun  4 20:58:04 2025
+<td>Sat Jun 28 00:21:26 2025
 </td>
 </tr>
 <tr>
@@ -97,24 +97,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.231s, Elapsed time = 0h 0m 0.231s
-   Placement Phase 1: CPU time = 0h 0m 0.021s, Elapsed time = 0h 0m 0.021s
-   Placement Phase 2: CPU time = 0h 0m 0.106s, Elapsed time = 0h 0m 0.107s
-   Placement Phase 3: CPU time = 0h 0m 0.711s, Elapsed time = 0h 0m 0.712s
-   Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
+   Placement Phase 0: CPU time = 0h 0m 0.189s, Elapsed time = 0h 0m 0.189s
+   Placement Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.015s
+   Placement Phase 2: CPU time = 0h 0m 0.135s, Elapsed time = 0h 0m 0.136s
+   Placement Phase 3: CPU time = 0h 0m 0.639s, Elapsed time = 0h 0m 0.639s
+   Total Placement: CPU time = 0h 0m 0.978s, Elapsed time = 0h 0m 0.979s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.208s, Elapsed time = 0h 0m 0.208s
-   Routing Phase 2: CPU time = 0h 0m 0.341s, Elapsed time = 0h 0m 0.341s
+   Routing Phase 1: CPU time = 0h 0m 0.228s, Elapsed time = 0h 0m 0.229s
+   Routing Phase 2: CPU time = 0h 0m 0.423s, Elapsed time = 0h 0m 0.423s
    Routing Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Total Routing: CPU time = 0h 0m 0.55s, Elapsed time = 0h 0m 0.55s
+   Total Routing: CPU time = 0h 0m 0.652s, Elapsed time = 0h 0m 0.653s
 Generate output files:
-   CPU time = 0h 0m 0.622s, Elapsed time = 0h 0m 0.622s
+   CPU time = 0h 0m 0.86s, Elapsed time = 0h 0m 0.86s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 322MB</td>
+<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 325MB</td>
 </tr>
 </table>
 <br/>
@@ -129,12 +129,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>1189/8640</td>
-<td>14%</td>
+<td>1212/8640</td>
+<td>15%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>1093(783 LUT, 310 ALU, 0 ROM16)</td>
+<td>1116(979 LUT, 137 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -144,8 +144,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>326/6693</td>
-<td>5%</td>
+<td>674/6693</td>
+<td>11%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -154,8 +154,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>326/6480</td>
-<td>6%</td>
+<td>674/6480</td>
+<td>11%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -169,8 +169,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>706/4320</td>
-<td>17%</td>
+<td>911/4320</td>
+<td>22%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -201,6 +201,11 @@ Generate output files:
 <td class="label">IOLOGIC</td>
 <td>3 OSER10<br/></td>
 <td>7%</td>
+</tr>
+<tr>
+<td class="label">BSRAM</td>
+<td>1 pROM<br/></td>
+<td>4%</td>
 </tr>
 </table>
 <h2><a name="I/O_Bank_Usage_Summary">I/O Bank Usage Summary:</a></h2>
@@ -237,8 +242,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">LW</td>
-<td>2/8</td>
-<td>25%</td>
+<td>1/8</td>
+<td>13%</td>
 </tr>
 <tr>
 <td class="label">GCLK_PIN</td>
@@ -271,11 +276,6 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">svo_hdmi_inst/n141_5</td>
-<td>LW</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">svo_hdmi_inst/n465_6</td>
 <td>LW</td>
 <td> -</td>
 </tr>
